Fix issue where some `code` elements were overflowing improperly

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -69,6 +69,8 @@ article {
 
       flex-grow: 1;
 
+      overflow: scroll;
+
       font-family: monospace;
       font-size: smaller;
     }
